Fix wrapping

--- a/src/sass/_problems.scss
+++ b/src/sass/_problems.scss
@@ -65,7 +65,6 @@
   padding: 12px 12px 9px 74px;
   position: relative;
 }
-.problem-slide .body,
 .problem-slide .body code
 {
   word-wrap: break-word;
